@@ -1,3 +1,8 @@
+2009-07-08  Mark Wielaard  <mjw@redhat.com>
+
+	* readelf.c (attr_callback): Handle DW_Form constants for
+	DW_AT_data_member_location.
+
 2009-07-06  Roland McGrath  <roland@redhat.com>
 
 	* readelf.c (register_info): New function.  Handle unknown register #s.
